--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="gamemode">GameMode</string>
     <string name="primitive">Primitive</string>
+    <string name="classic">Classic</string>
+    <string name="complex">Complex</string>
 </resources>
