--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,11 @@
 <resources>
     <string name="app_name">TicTacTab</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
     <string name="title_game">Game</string>
     <string name="title_rules">Rules</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="gamemode">GameMode</string>
-    <string name="primitive">Primitive</string>
-    <string name="classic">Classic</string>
-    <string name="complex">Complex</string>
+    <string name="title_classic">Classic</string>
+    <string name="title_complex">Complex</string>
+
+    <string name="game_mode">Game Mode</string>
 </resources>
