--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,13 @@
     <string name="title_complex">Complex</string>
 
     <string name="game_mode">Game Mode</string>
+    <string name="cell_coordinates_0_0">Cell coordinates 0 0</string>
+    <string name="cell_coordinates_0_1">Cell coordinates 0 1</string>
+    <string name="cell_coordinates_0_2">Cell coordinates 0 2</string>
+    <string name="cell_coordinates_1_0">Cell coordinates 1 0</string>
+    <string name="cell_coordinates_1_1">Cell coordinates 1 1</string>
+    <string name="cell_coordinates_1_2">Cell coordinates 1 2</string>
+    <string name="cell_coordinates_2_0">Cell coordinates 2 0</string>
+    <string name="cell_coordinates_2_1">Cell coordinates 2 1</string>
+    <string name="cell_coordinates_2_2">Cell coordinates 2 2</string>
 </resources>
