--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">TicTacTab</string>
+
+    <!-- UI elements -->
+    <string name="restart">Restart</string>
+        <!-- Navigation -->
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
     <string name="title_game">Game</string>
@@ -8,6 +12,9 @@
     <string name="title_complex">Complex</string>
 
     <string name="game_mode">Game Mode</string>
+
+    <!-- Descriptions -->
+        <!-- Cells -->
     <string name="cell_coordinates_0_0">Cell coordinates 0 0</string>
     <string name="cell_coordinates_0_1">Cell coordinates 0 1</string>
     <string name="cell_coordinates_0_2">Cell coordinates 0 2</string>
