--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
 
     <!-- Messages -->
     <string name="winning_message">Player %1$s won!</string>
-    <string name="current_player">Current player: %1$s</string>
+    <string name="current_player">Current player: </string>
+    <string name="current_player_icon">%1$s</string>
 </resources>
