--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <!-- Messages -->
     <string name="winner_message">Winner:</string>
     <string name="current_player_message">Current player: </string>
+    <string name="draw_message">Draw! No winner.</string>
 
 
 </resources>
