--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,8 +30,9 @@
     <string name="draw_message">Ничья! Никто не победил.</string>
     <string name="game_finished_message">Игра уже завершена!</string>
     <string name="internal_error_message">Произошла какая-то ошибка!</string>
-    <string name="entity_occupied_message">Эта %1$s уже занята! Выберете другую.</string>
+    <string name="entity_occupied_message">Эта %1$s уже занята! Выберите другую.</string>
     <string name="cell_var">клетка</string>
     <string name="block_var">блок</string>
+    <string name="block_inactive_message">Этот блок неактивен! Выберите другой.</string>
 
 </resources>
