--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <!-- UI elements -->
     <string name="restart">Restart</string>
-        <!-- Navigation -->
+    <string name="confirm">Confirm</string>
+    <!-- Navigation -->
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
     <string name="title_game">Game</string>
