--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- UI elements -->
     <string name="restart">Перезапустить</string>
+    <string name="cancel">Отменить</string>
     <string name="confirm">Подтвердить</string>
 
     <string name="in_development">В разработке</string>
@@ -54,6 +55,8 @@
     <string name="cell_var">клетка</string>
     <string name="block_var">блок</string>
     <string name="block_inactive_message">Этот блок неактивен! Выберите другой.</string>
+    <string name="confirm_message">Если вы поменяете режим игры сейчас, игра будет перезапущена</string>
+    <string name="confirm_title_message">Сохранить изменения?</string>
 
     <!-- Settings -->
     <string name="complex_game_mode">Режим сложной игры</string>
@@ -67,16 +70,15 @@
     <string name="use_app_night_mode">Тема приложения</string>
 
     <!-- Rules -->
-    <string name="rules_0">\tДобро пожаловать в расширенные крестики нолики!</string>
-    <string name="rules_1">\tВ приложение представлены сразу несколько версий всем известной игры, которые вы можете переключать в настройках.
-        Помимо классической версии 3 x 3, вы можете попробовать усложненный вариант, в котором вместо обычных клеток выступают блоки клеток 3 x 3. Для победы вам необходимо так же, как обычно заполнить 3 блока подряд, а что бы присвоить себе какой-либо блок, вы должны одержать победу на маленьком поле в этом блоке, т.е. собрать в нем 3 клетки в ряд.</string>
-    <string name="rules_2_0">\tУ этой расширенной версии есть несколько режимов игры:</string>
-    <string name="rules_2_1">\t•	Базовый режим позволяет делать ход в любой части игрового поля;</string>
-    <string name="rules_2_2">\t•	Поочередный, в котором игра ведется в каждом блоке по очереди. Первый игрок может походить куда угодно, но после этого нельзя сменить блок, пока игра в нем не завершится.</string>
-    <string name="rules_2_3">\t•	Режим выбора. В этом режиме правила становятся несколько сложнее, активный блок меняется каждый ход, основываясь на предыдущем ходу. Каждый игрок определяет следующий блок координатами клетки, в которую он ходит: например, игрок походил в правую нижнюю клетку в активном блоке, значит для следующего игрока активным будет правый нижний блок.</string>
-
-    <string name="rules_3">\tОднако с такими правилами может произойти ситуация, когда активным должен тать уже завершенный блок, тогда текущему игроку предоставляется выбор среди всех открытых блоков, далее правила идут так же. </string>
-    <string name="rules_4">\t•	Возвратный режим: Каждый игрок определяет следующий блок координатами клетки, в которую он ходит: например, игрок походил в левую верхнюю клетку в активном блоке, значит для следующего игрока активным будет левый верхний блок.
-Однако в отличие от предыдущего режима, игрок не сможет выбрать любой блок, потому что игра сама его определит. Текущий игрок будет ходить в последнем не завершенном блоке, в котором велась игра до этого. </string>
+    <string name="rules_0">Добро пожаловать в расширенные крестики нолики!</string>
+    <string name="rules_1">\t\tВ приложение представлены сразу несколько версий всем известной игры, которые вы можете переключать в настройках.
+\t\tПомимо классической версии 3 x 3, вы можете попробовать усложненный вариант, в котором вместо обычных клеток выступают блоки из клеток 3 x 3. Для победы вам необходимо так же, как обычно заполнить 3 блока подряд, а что бы присвоить себе какой-либо блок, вы должны одержать победу на маленьком поле в этом блоке, т.е. собрать в нем 3 клетки в ряд.</string>
+    <string name="rules_2">\t\tУ этой расширенной версии есть несколько режимов игры:
+        \t\t•Базовый режим позволяет делать ход в любой части игрового поля;
+        \t\t•Поочередный, в котором игра ведется в каждом блоке по очереди. Первый игрок может походить куда угодно, но после этого нельзя сменить блок, пока игра в нем не завершится.
+        \t\t•Режим выбора. В этом режиме правила становятся несколько сложнее, активный блок меняется каждый ход, основываясь на предыдущем. Игрок определяет следующий блок координатами клетки, в которую он ходит: например, игрок походил в правую нижнюю клетку в активном блоке, значит для следующего игрока активным будет правый нижний блок.</string>
+    <string name="rules_3">\t\tОднако с такими правилами может произойти ситуация, когда активным должен cтать уже завершенный блок, тогда текущему игроку предоставляется выбор среди всех открытых блоков, далее правила идут так же. </string>
+    <string name="rules_4">\t\t•Возвратный режим: Каждый игрок определяет следующий блок координатами клетки, в которую он ходит: например, игрок походил в левую верхнюю клетку в активном блоке, значит для следующего игрока активным будет левый верхний блок.
+\t\tОднако в отличие от предыдущего режима, игрок не сможет выбрать любой блок, потому что игра сама его определит. Текущий игрок будет ходить в последнем не завершенном блоке, в котором велась игра до этого. </string>
 
 </resources>
