--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,10 +61,10 @@
     <!-- Settings -->
     <string name="complex_game_mode">Режим сложной игры</string>
     <!-- Complex Game Modes -->
-    <string name="backstack_mode">Классический</string>
-    <string name="choise_mode">Классический с откатом</string>
-    <string name="single_mode">Поблочный</string>
-    <string name="basic_mode">Свободный</string>
+    <string name="complex_mode_1">Классический</string>
+    <string name="complex_mode_0">Классический с откатом</string>
+    <string name="complex_mode_2">Поблочный</string>
+    <string name="complex_mode_3">Свободный</string>
 
     <string name="night_theme">Тёмная тема</string>
     <string name="use_app_night_mode">Тема приложения</string>
